--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -6,7 +6,7 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <link rel="SHORTCUT ICON" href="https://aspiring-careers.github.io/hair-stylist-career/favicon.ico">
 	  
-	  <title>How to Become a Hair Stylist Learn from Online Teachers with Tips| aspiring-careers.github.io</title>
+	  <title>How to Become a Hair Stylist Learn from Online Teachers with Tips</title>
 	  <meta name="description" content="How to become a hair stylist or barber, let you learn from online teachers cutting hair for men, women and children. Learn hair cutting techniques. ">
 	  
           <meta name="robots" content="max-image-preview:large"/>
