--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -55,7 +55,7 @@
        }
     </style>
 
-    <title>Women short hairs cutting</title>
+    <title>Bob, Pixie Women short hairs cutting that looks young and trendy</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
@@ -191,8 +191,8 @@
        </div>
           <br> 
 
-       <h5>This is another selected Norman tutorial women's short hair cut or Bob hair cut for beginner</h5>
-	      This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women Bob hair with scissors.
+       <h5>This is a selected Norman tutorial women's short hair cut or Bob hair cut for beginner</h5>
+	      This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women Bob hair with scissors. The Bob haircut will looks young and trendy.
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/EuMZZbPTv5Q?rel=0" allowfullscreen> 
 		     
