--- a/hair-stylist-career/women-long.html
+++ b/hair-stylist-career/women-long.html
@@ -55,7 +55,7 @@
        }
     </style>
 
-    <title>Women long hairs cutting</title>
+    <title>Amazing, modern look for Women long hairs cutting</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
@@ -131,7 +131,7 @@
     <!--end of navigation bar-->
     <br>
 
-       <h1>Women long hair cut </h1>
+       <h1>Beautiful and elegant look Women long hair cut </h1>
        
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
 
