--- a/hair-stylist-career/men-smart.html
+++ b/hair-stylist-career/men-smart.html
@@ -55,7 +55,7 @@
        }
     </style>
 
-    <title>Men smart short hair cutting</title>
+    <title>Fashionable, stylist Men smart short hair cutting</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
@@ -131,7 +131,7 @@
     <!--end of navigation bar-->
       <br>
 
-       <h1>Men short hair cut men that looks smart</h1>
+       <h1>Fashionable, stylist Men short hair cut men that looks smart</h1>
        
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
 	<p> An example of picture of a man with smart cut is given below: </p>
