--- a/hair-stylist-career/men-short.html
+++ b/hair-stylist-career/men-short.html
@@ -55,7 +55,7 @@
        }
     </style>
 
-    <title>Men short hair cutting</title>
+    <title>Handsome and neat Men short hair cutting</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
@@ -132,7 +132,7 @@
     <!--end of navigation bar-->
     <br>
 
-       <h1>Men short hairs cut </h1>
+       <h1>Handsome and neat Men short hairs cut </h1>
        
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
 
