--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -132,7 +132,7 @@
     <!--end of navigation bar-->
       <br>
 
-       <h1>Women short hair cut </h1>
+       <h1>Bob, Pixie Women short hair cut that looks young and trendy</h1>
        
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
 
