--- a/hair-stylist-career/men-short.html
+++ b/hair-stylist-career/men-short.html
@@ -174,6 +174,15 @@
        </div>
           <br>	 	    
 
+	<h5>Hair Stylist Elnar tutorial men's hair cut for beginner</h5>
+	   This video tutorial by Elnar you can watch and learn the effective techniques for cutting men's hair with scissors.	
+       <div class="embed-responsive embed-responsive-16by9">
+             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Xa3edqQrF2E?rel=0" allowfullscreen> 
+		     
+             </iframe>
+	       
+       </div>
+          <br>	 
 
   
 
