--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -100,6 +100,10 @@
                    </li>
 
                    <li class="nav-item">
+                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/the-step-by-step-of-cutting-hair.html" aria-label="the step-by-step of cutting hair">Steps in hair cutting</a>
+                   </li>
+		       
+                   <li class="nav-item">
                        <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>
                    </li>
 
