--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -55,7 +55,7 @@
        }
     </style>
 
-    <title>Bob, Pixie Women short hairs cutting that looks young and trendy</title>
+    <title>Bob, Pixie Women short hair cutting that looks young and trendy</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
