--- a/hair-stylist-career/the-step-by-step-of-cutting-hair.html
+++ b/hair-stylist-career/the-step-by-step-of-cutting-hair.html
@@ -7,7 +7,7 @@
 	  <link rel="SHORTCUT ICON" href="https://aspiring-careers.github.io/hair-stylist-career/favicon.ico">
 	  
 	  <title>Steps in hair cutting: Learn from Online Teachers with the step-by-step of cutting hair</title>
-	  <meta name="description" content="How to become a hair stylist or barber, let you learn from online teachers cutting hair for men, women and children. Learn hair cutting techniques. ">
+	  <meta name="description" content="Steps in hair cutting: Learn from Online Teachers with the step-by-step of cutting hair. Learn hair cutting techniques. ">
 	  
           <meta name="robots" content="max-image-preview:large"/>
 	            <link rel="canonical" href="https://aspiring-careers.github.io/hair-stylist-career/" />
