--- a/hair-stylist-career/the-step-by-step-of-cutting-hair.html
+++ b/hair-stylist-career/the-step-by-step-of-cutting-hair.html
@@ -157,7 +157,8 @@
        <h1> The step-by-step of cutting hair</h1>
        <h4>A website to provide information and introduce you to the teachers that can help you learn to be a hair stylist </h4>
        
-       <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
+       <p>To be a hair stylist or barber as a hobby in your free time or a professsional hair stylist is very rewarding. You can be a barber at home cutting hair for your children. 
+	  So, you don't need to go to out to find a salon or barber shop near you!</p>
 
        <h4>To cut hairs for others is a skills that can be learned by following the simple step-by-step instructions given by a teacher</h4>
        
