--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -161,7 +161,7 @@
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding. You can be a barber at home to cut hair for your children. 
           So, you will save some money for not requires to pay for your salon or barber shop near you!</p>
 
-       <h4>To cut hairs for others is a skills that can be learned by following the simple step-by-step instructions given by a teacher</h4>
+       <h4>To cut hairs for others is a skill that can be learned by following the simple step-by-step instructions given by a teacher</h4>
        
       
 	<p>       In this website we provide information to you to start learning to cut hairs. You can learn from the teachers we recommended to you that include cutting hairs for men and women. 
