--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
        <h1> Explore aspiring careers </h1>
        <h4>Exploring aspiring careers can help you find a career that matches your interests, skills, and personality.</h4>
        
-       <p>1. To be a <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about hair stylist">hair stylist</a> as a hobby in your free time or a professsional hair stylist is very rewarding</p>
+       <p>1. To be a <a href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about hair stylist">hair stylist</a> as a hobby in your free time or a professsional hair stylist is very rewarding</p>
 
 
        If you have any comments or feedback please let us know. 
