--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
        <h4>Exploring aspiring careers can help you find a career that matches your interests, skills, and personality.</h4>
        
        <p>1. To be a <a href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about hair stylist">hair stylist</a> as a hobby in your free time or a professsional hair stylist is very rewarding</p>
-       <p>2. To be a <a href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about computer technician">computer technician</a> as a hobby in your free time or a professsional hair stylist is very rewarding</p>
+       <p>2. To be a <a href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about computer technician">computer technician</a> as a hobby in your free time or a professsional computer technician is very rewarding</p>
 
        If you have any comments or feedback please let us know. 
 
