--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -87,14 +87,14 @@
     <div class="container">
 	    <div class="w-100 p-3" id=TopLogo>
 	         <center>
-                      <img src="images/Hair Stylist Career 8.jpg" alt="Hair Stylist Career Logo" align="middle">    
+                      <img src="images/Aspiring Careers Logo 1h.jpg" alt="Aspiring Careers Logo" align="middle">    
                  </center>
 	    </div>
 
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
            <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/" aria-label="Read more about Hair Stylist Career"> 
-              <img src="images/Hair Stylist Career 8a.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
+              <img src="images/Aspiring Careers Logo 1h.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
 
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
