--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -93,7 +93,7 @@
 
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-           <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/" aria-label="Read more about Hair Stylist Career"> 
+           <a class="navbar-brand" href="https://aspiring-careers.github.io/" aria-label="Read more about Aspiring Career"> 
               <img src="images/Aspiring Careers Logo 1h.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
 
