--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <div class="container">
 	    <div class="w-100 p-3" id=TopLogo>
 	         <center>
-                      <img src="images/Aspiring Careers Logo 1h.jpg" alt="Hair Stylist Career Logo" align="middle">    
+                      <img src="images/Aspiring Careers Logo 1h.jpg" alt="Hair Stylist Career Logo" align="middle">   
+			 <h1>Explore Aspiring Careers</h1>
                  </center>
 	    </div>
 
