--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	    <div class="w-100 p-3" id=TopLogo>
 	         <center>
                       <img src="images/Aspiring Careers Logo 1h.jpg" alt="Hair Stylist Career Logo" align="middle">   
-			 <h1>Explore Aspiring Careers</h1>
+			 <h1 style="color:yellow">Explore Aspiring Careers</h1>
                  </center>
 	    </div>
 
