--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -87,7 +87,8 @@
     <div class="container">
 	    <div class="w-100 p-3" id=TopLogo>
 	         <center>
-                      <img src="images/Aspiring Careers Logo 1h.jpg" alt="Aspiring Careers Logo" align="middle">    
+                      <img src="images/Aspiring Careers Logo 1h.jpg" alt="Aspiring Careers Logo" align="middle"> 
+			  <h1 style="color:yellow">Explore Aspiring Careers</h1>
                  </center>
 	    </div>
 
