--- a/computer-technician-career/repair-computer.html
+++ b/computer-technician-career/repair-computer.html
@@ -87,15 +87,17 @@
     <div class="container">
 	    <div class="w-100 p-3" id=TopLogo>
 	         <center>
-                      <img src="images/Hair Stylist Career 8.jpg" alt="Hair Stylist Career Logo" align="middle">    
+                      <img src="images/Aspiring Careers Logo 1h.jpg" alt="Aspiring Careers Logo" align="middle"> 
+			  <h1 style="color:yellow">Explore Aspiring Careers</h1>
                  </center>
 	    </div>
 
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-           <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/" aria-label="Read more about Hair Stylist Career"> 
-              <img src="images/Hair Stylist Career 8a.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
+          <a class="navbar-brand" href="https://aspiring-careers.github.io/" aria-label="Read more about Aspiring Career"> 
+              <img src="images/Aspiring Careers Logo 1h.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
+
 
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -109,11 +111,11 @@
            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                    <li class="nav-item active">
-                       <a class="nav-link" href="https://aspiring-careers.github.io/computer-technician-career/index.html" aria-label="Read more about Hair Stylist Career">Home <span class="sr-only">(current) </span> </a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/computer-technician-career/index.html" aria-label="Read more about Computer technician">Home <span class="sr-only">(current) </span> </a>
                    </li>
 
                    <li class="nav-item">
-                       <a class="nav-link" href="https://aspiring-careers.github.io/computer-technician-career/repair-computer.html" aria-label="the step-by-step of cutting hair">Computer Repair</a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/computer-technician-career/repair-computer.html" aria-label="the step-by-step of computer repair">Computer Repair</a>
                    </li>
 		       
 
