--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -88,7 +88,7 @@
 	    <div class="w-100 p-3" id=TopLogo>
 	         <center>
                       <img src="images/Aspiring Careers Logo 1h.jpg" alt="Aspiring Careers Logo" align="middle"> 
-			  <h1 style="color:yellow">Explore Aspiring Careers</h1>
+			  <h1 style="color:yellow">Explore Aspiring Careers: Computer Technician</h1>
                  </center>
 	    </div>
 
