--- a/computer-technician-career/repair-computer.html
+++ b/computer-technician-career/repair-computer.html
@@ -177,7 +177,7 @@
 	       
        </div>
 
-	<h5>This is a second selected video lesson by Carey on how to diagnose and repair dead computer</h5>
+	<h5>This is a second selected video lesson by Carey on how to diagnose and repair dead computer follow up: What if it was the RAM SOCKET? </h5>
 	     
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/RKNO09RoR-8?rel=0" allowfullscreen> 
