--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -173,9 +173,9 @@
 	    <br>
 	    <br>
 
-<h5><b>Computer power is Turn On but No Display problem, please refer to <a href="https://www.youtube.com/watch?v=m3Bqh_EdgvI"> an explanation how you can fix this problem.</b> </a> </h5>		   
-	    <br> The cause of the No Display could be because of accumulated dust on the Memory Stick whether it is 4 GB or 2 GB, all you need to do is to take out the Memory Stick and clean it with an eraser. Then
-		     clean it with a brush and install back the Memory Stick. I have tried a few desktop computers myself and it works! 
+<h5><b>Computer power is Turn On but No Display problem, please refer to an explanation below on how you can fix this problem.</b>  </h5>		   
+	    <br> The cause of the No Display could be because of accumulated dust on the Memory Stick whether it is 4 GB or 2 GB, all you need to do is to take out the Memory Stick and clean it with an eraser. Then, 
+		     clean it with a brush and install back the Memory Stick. I have tried this simple method on a few desktop computers myself and it works! 
 
 		       <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/m3Bqh_EdgvI?rel=0" allowfullscreen> 
@@ -217,5 +217,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
