--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -168,7 +168,7 @@
  <br> The steps taught by Carey Holzman is easy to follow. We hope you will watch it a few times and try repairing computer for others. The more you practice 
        repairing computer you will pick up the skills for effective computer repair. Enjoy the accomplishment of being able to repair computer for others. Please share this website with your friends and family members who are interested
 	    to learn to repair computer.
-       If you have any comments or feedback please <a href="https://aspiring-careers.github.io/computer-technician-career/contact.html">let us know </>. 
+       If you have any comments or feedback please <a href="https://aspiring-careers.github.io/computer-technician-career/contact.html">let us know </a>. 
 
 	    <br>
 	    <br>
@@ -217,6 +217,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
 
