--- a/computer-technician-career/basic-computer-repair.html
+++ b/computer-technician-career/basic-computer-repair.html
@@ -194,6 +194,13 @@
        <br>
        <p>It's a legitimate and safe tool that runs a series of tests on the memory hardware, which requires a restart to complete. This helps diagnose potential problems that can lead to system instability, crashes, or data corruption. </p>
 	    <br> >mdsched.exe
+
+		<br>
+		<br>
+		<h5><b>Computer power is Turn On but No Display problem, please refer to an explanation below on how you can fix this problem.</b>  </h5>		   
+	    <br> The cause of the No Display could be because of accumulated dust on the Memory Stick whether it is 4 GB or 2 GB, all you need to do is to take out the Memory Stick and clean it with an eraser. Then, 
+		     clean it with a brush and install back the Memory Stick. I have tried this simple method on a few desktop computers myself and it works! 
+
 		       <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/m3Bqh_EdgvI?rel=0" allowfullscreen> 
 		     
