--- a/computer-technician-career/repair-computer.html
+++ b/computer-technician-career/repair-computer.html
@@ -125,9 +125,11 @@
                           Computer Repair
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						    
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/computer-repair.html" aria-label="Read more about men haircut smart look"> Computer Repair</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/build-computer.html" aria-label="Read more about short men haircut"> Build a new computer</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/repair-computer.html" aria-label="Read more about computer repair"> Computer Repair</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/basic-computer-repair.html" aria-label="Read more about basic computer repair"> Basic Computer Repair</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/build-computer.html" aria-label="Read more about building a new computer"> Build a new computer</a>
+
+
                        </div>
 
                    </li>
@@ -228,4 +230,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
