--- a/computer-technician-career/basic-computer-repair.html
+++ b/computer-technician-career/basic-computer-repair.html
@@ -148,11 +148,15 @@
     <!--end of navigation bar-->
 
        <br>
-       <h1> The Windows Disk Cleanup utility to remove unnecessary files from your hard disk</h1>
+
+	<1> When you computer is not stable for example keep restarting again and again, you can try below steps: </h1>	
+       <h2> The Windows Disk Cleanup utility to remove unnecessary files from your hard disk</h2>
        <h4>Open the command line with Administrator then, type the below commands: </h4>
        <br>
+              <p>>cleanmgr.exe</p>
+
 		<p> cleanmgr.exe is the executable file for the Windows Disk Cleanup tool, a utility used to free up disk space by removing unnecessary files like temporary internet files, Recycle Bin contents, and system files. It helps maintain system performance by identifying and deleting files that are no longer needed.  </p>
-       <p>>cleanmgr.exe</p>
+
 
        <h4>A Windows Tool that scans a disk:</h4>
 	<br>
