--- a/computer-technician-career/basic-computer-repair.html
+++ b/computer-technician-career/basic-computer-repair.html
@@ -149,7 +149,7 @@
 
        <br>
 
-	<1> When you computer is not stable for example keep restarting again and again, you can try below steps: </h1>	
+	<h1> When you computer is not stable for example keep restarting again and again, you can try below steps: </h1>	
        <h2> The Windows Disk Cleanup utility to remove unnecessary files from your hard disk</h2>
        <h4>Open the command line with Administrator then, type the below commands: </h4>
        <br>
