--- a/computer-technician-career/safety-first.html
+++ b/computer-technician-career/safety-first.html
@@ -6,8 +6,8 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <link rel="SHORTCUT ICON" href="https://aspiring-careers.github.io/hair-stylist-career/favicon.ico">
 	  
-	  <title>Basic Computer Repair</title>
-	  <meta name="description" content="Basic computer repair: Power On but No display, Computer Keep restarting  ">
+	  <title>Safety First in Computer Repair</title>
+	  <meta name="description" content="Safety First in Computer Repair">
 	  
           <meta name="robots" content="max-image-preview:large"/>
 	            <link rel="canonical" href="https://aspiring-careers.github.io/hair-stylist-career/" />
@@ -16,13 +16,13 @@
 	  <meta property="og:site_name" content="Hair Stylist Guide"/>
           <meta property="og:url" content="https://aspiring-careers.github.io/hair-stylist-career/index.html" />
 	  <meta property="og:locale" content="en_US"/>
-	  <meta property="og:description" content="How to become a hair stylist or barber, let you learn from online teachers for cutting hair for men, women and children. Learn hair cutting techniques. "/>
-	  <meta property="og:title" content="How to become a hair stylist? Learn hair cutting from online teachers" />
+	  <meta property="og:description" content="Safety First in Computer Repair"/>
+	  <meta property="og:title" content="Safety First in Computer Repair" />
           <meta property="og:image" content="https://aspiring-careers.github.io/hair-stylist-career/images/Hair Stylist Career 8a.jpg" />
 
 		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:title" content="How to Become a Hair Stylist Learn from Online Teachers with Tips | aspiring-careers" />
-		<meta name="twitter:description" content="How to become a hair stylist or barber, let you learn from online teachers cutting hair for men, women and children. Learn hair cutting techniques. " />	  
+		<meta name="twitter:title" content="Safety First in Computer Repair" />
+		<meta name="twitter:description" content="Safety First in Computer Repair " />	  
 
     <!-- Required meta tags -->
     <!-- <meta charset="utf-8"> -->
@@ -124,6 +124,7 @@
                           Computer Repair
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						   <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/safety-first.html" aria-label="Read more about safety first"> Safety First</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/repair-computer.html" aria-label="Read more about computer repair"> Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/basic-computer-repair.html" aria-label="Read more about basic computer repair"> Basic Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/build-computer.html" aria-label="Read more about building a new computer"> Build a new computer</a>
@@ -149,11 +150,11 @@
 
        <br>
 
-	<h1> When you computer is not stable for example keep restarting again and again, you can try below steps: </h1>	
-       <h2> The Windows Disk Cleanup utility to remove unnecessary files from your hard disk</h2>
-       <h4>Open the command line with Administrator then, type the below commands: </h4>
+	<h1>Safety First in Computer Repair</h1>	
+       <h2> The most important thing in computer repair is Safety First</h2>
+       <h4>Only do computer repair work when the computer power is Turn OFF. </h4>
        <br>
-              <p>>cleanmgr.exe</p>
+              <p>>This is the most important step to ensure you are safe to do computer repair. Make sure you follow this rule.</p>
 
 		<p> cleanmgr.exe is the executable file for the Windows Disk Cleanup tool, a utility used to free up disk space by removing unnecessary files like temporary internet files, Recycle Bin contents, and system files. It helps maintain system performance by identifying and deleting files that are no longer needed.  </p>
 
