--- a/computer-technician-career/basic-computer-repair.html
+++ b/computer-technician-career/basic-computer-repair.html
@@ -124,6 +124,7 @@
                           Computer Repair
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						   <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/safety-first.html" aria-label="Read more about safety first">Safety First in Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/repair-computer.html" aria-label="Read more about computer repair"> Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/basic-computer-repair.html" aria-label="Read more about basic computer repair"> Basic Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/build-computer.html" aria-label="Read more about building a new computer"> Build a new computer</a>
