--- a/computer-technician-career/index.html
+++ b/computer-technician-career/index.html
@@ -124,6 +124,7 @@
                           Computer Repair
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						   <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/safety-first.html" aria-label="Read more about safety first"> Safety First</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/repair-computer.html" aria-label="Read more about computer repair"> Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/basic-computer-repair.html" aria-label="Read more about basic computer repair"> Basic Computer Repair</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/computer-technician-career/build-computer.html" aria-label="Read more about building a new computer"> Build a new computer</a>
@@ -213,6 +214,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
 
