--- a/computer-technician-career/safety-first.html
+++ b/computer-technician-career/safety-first.html
@@ -154,7 +154,8 @@
        <h2> The most important thing in computer repair is Safety First</h2>
        <h4>Only do computer repair work when the computer power is Turn OFF. </h4>
        <br>
-              <p>>This is the most important step to ensure you are safe to do computer repair. Make sure you follow this rule.</p>
+              <p>This is the most important step to ensure you are safe to do computer repair. Make sure you follow this rule.</p>
+		      <p>It is your responsibility to ensure you are safe when doing computer repair work. As mentioned earlier, only touch the computer parts when the power is OFF and disconnected from the Power Plug.</p>
 
 
 
