--- a/computer-technician-career/build-computer.html
+++ b/computer-technician-career/build-computer.html
@@ -151,7 +151,7 @@
        <br>
 
 	<h1>Ｙｏｕ　ｃａｎ　ｂｕｉｌｄ　ｙｏｕｒ　ｏｗｎ　ｄｅｓｋｔｏｐ　ｃｏｍｐｕｔｅｒ　ｙｏｕｒｓｅｌｆ．</h1>	
-       <h2> The first step is buy all the parts neeeded to assemble a desktop computer.</h2>
+       <h2> The first step is to buy all the parts neeeded to assemble a desktop computer.</h2>
        <h4>Only do computer repair work when the computer power is Turn OFF. </h4>
        <br>
               <p>This is the most important step to ensure you are safe to do computer repair. Make sure you follow this rule.</p>
