Fix heading text to use standard characters

--- a/computer-technician-career/build-computer.html
+++ b/computer-technician-career/build-computer.html
@@ -150,7 +150,7 @@
 
        <br>
 
-	<h1>Ｙｏｕ　ｃａｎ　ｂｕｉｌｄ　ｙｏｕｒ　ｏｗｎ　ｄｅｓｋｔｏｐ　ｃｏｍｐｕｔｅｒ　ｙｏｕｒｓｅｌｆ．</h1>	
+	<h1>You can build your own desktop computer yourself.</h1>	
        <h2> The first step is to buy all the parts neeeded to assemble a desktop computer.</h2>
        <h4>Only do computer repair work when the computer power is Turn OFF. </h4>
        <br>
